--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -9,7 +8,6 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="icon" type="image/png" href="./favicon.png">
 </head>
-
 <body>
     <div>
         <header>
@@ -38,7 +36,7 @@
                 <div>
                     <header>
                         <h2>Services</h2>
-                        <p></p>
+                        <p>Services description goes here.</p>
                     </header>
                     <div>
                         <h3>Design &amp; Concept</h3>
@@ -55,7 +53,7 @@
                 <div>
                     <header>
                         <h2>Works</h2>
-                        <p></p>
+                        <p>Works description goes here.</p>
                     </header>
                     <div>
                         <article><h3>Interior Design</h3></article>
@@ -69,7 +67,7 @@
                 <div>
                     <header>
                         <h2>About Us</h2>
-                        <p></p>
+                        <p>About Us description goes here.</p>
                     </header>
                     <div>
                         <h3>Who are we</h3>
@@ -96,7 +94,7 @@
                 <div>
                     <header>
                         <h2>Testimonials</h2>
-                        <p></p>
+                        <p>We are more than a digital company.</p>
                     </header>
                     <div>
                         <article>Testimonial 1</article>
@@ -110,7 +108,7 @@
                 <div>
                     <header>
                         <h2>Contact</h2>
-                        <p></p>
+                        <p>We like to know new people.</p>
                     </header>
                     <div></div>
                 </div>
@@ -124,5 +122,5 @@
         </footer>
     </div>
 </body>
-
 </html>
+
