--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -23,15 +23,10 @@
             <div><h1>Homepage</h1></div>
             <section>
                 <div>
-                    <header><h2>We help you build your brand!</h2></header>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <header><h2>Services</h2><p>Some services details here</p></header>
+                    <header><h2>We help you build your brand!</h2><p>Some services details here</p></header>
                     <div>
                         <h3>Design & Concept</h3>
-                        ...
+                        <!-- ... Rest of the content for Services -->
                     </div>
                 </div>
             </section>
@@ -40,7 +35,7 @@
                     <header><h2>Works</h2><p>Some works details here</p></header>
                     <div>
                         <article><h3>...</h3></article>
-                        ...
+                        <!-- ... Rest of the content for Works -->
                     </div>
                 </div>
             </section>
@@ -49,7 +44,7 @@
                     <header><h2>About Us</h2><p>Some about us details here</p></header>
                     <div>
                         <h3>...</h3>
-                        ...
+                        <!-- ... Rest of the content for About Us -->
                     </div>
                 </div>
             </section>
@@ -58,7 +53,7 @@
                     <header><h2>Latest news</h2></header>
                     <div>
                         <article><h3>...</h3></article>
-                        ...
+                        <!-- ... Rest of the content for Latest news -->
                     </div>
                 </div>
             </section>
@@ -67,14 +62,16 @@
                     <header><h2>Testimonials</h2><p>Some testimonials details here</p></header>
                     <div>
                         <article>...</article>
-                        ...
+                        <!-- ... Rest of the content for Testimonials -->
                     </div>
                 </div>
             </section>
             <section>
                 <div>
                    <header><h2>Contact</h2><p>Some contact details here</p></header>
-                    <div></div>
+                    <div>
+                        <!-- ... Rest of the content for Contact -->
+                    </div>
                 </div>
             </section>
         </main>
@@ -87,3 +84,4 @@
     </div>
 </body>
 </html>
+
