--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -18,6 +18,14 @@
         </header>
     </div>
 
+    <!-- Hero section placed below Header -->
+    <div>
+        <!-- ... Hero section content as in 21-index.html -->
+        <h2>Hero Section Content</h2>
+        <p>This is the content of the Hero section.</p>
+        <a href="#get-started">Get started</a> <!-- Create a link to # with the text Get started -->
+    </div>
+
     <div>
         <main>
             <div><h1>Homepage</h1></div>
@@ -46,24 +54,6 @@
                 <a href="https://www.instagram.com/holbertonschool/" target="_blank">Instagram</a>
             </div>
         </footer>
-    </div>
-
-    <!-- Hero section -->
-    <div>
-        <!-- ... Hero section content as in 21-index.html -->
-        <a href="#get-started">Get started</a> <!-- Create a link to # with the text Get started -->
-    </div>
-
-    <!-- About Us section -->
-    <div>
-        <!-- ... About Us section content as in 21-index.html -->
-        <a href="about.html">Learn more about us</a> <!-- Create a link to about.html with the text Learn more about us -->
-    </div>
-
-    <!-- Contact section -->
-    <div>
-        <!-- ... Contact section content as in 21-index.html -->
-        <a href="contact.html">Get in touch</a> <!-- Create a link to contact.html with text Get in touch -->
     </div>
 </body>
 </html>
