--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -23,7 +23,14 @@
         <!-- ... Hero section content as in 21-index.html -->
         <h2>Hero Section Content</h2>
         <p>This is the content of the Hero section.</p>
-        <a href="#get-started">Get started</a> <!-- Create a link to # with the text Get started -->
+        <a href="#">Get started</a> <!-- Create a link to # with the text Get started -->
+    </div>
+
+    <!-- About Us section -->
+    <div>
+        <h2>About Us</h2>
+        <p>About us details...</p>
+        <a href="about.html">Learn more about us</a>
     </div>
 
     <div>
@@ -40,6 +47,15 @@
             </section>
             <!-- ... Rest of the sections as in 21-index.html -->
         </main>
+    </div>
+
+    <!-- Contact section -->
+    <div>
+        <section>
+            <h2>Contact</h2>
+            <p>Contact details...</p>
+            <a href="contact.html">Get in touch</a>
+        </section>
     </div>
 
     <div>
