--- a/0x00-html_advanced/27-index.html
+++ b/0x00-html_advanced/27-index.html
@@ -14,7 +14,15 @@
             <div>
                 <span>Techium</span>
                 <nav>
-                    <!-- Empty nav tag -->
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#works">Works</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#latest_news">Latest news</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
                 </nav>
             </div>
         </header>
@@ -26,75 +34,30 @@
                 <h1>Homepage</h1>
             </div>
 
-            <section>
-                <div>
-                    <h2>We help you build your brand!</h2>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <h2>Services</h2>
-                    <h3>Design &amp; Concept</h3>
-                    <h3>Digital Strategy</h3>
-                    <h3>Content Strategy</h3>
-                    <h3>UX Design</h3>
-                    <h3>Web Development</h3>
-                    <h3>Social Media</h3>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <h2>Works</h2>
-                    <article><h3>Interior Design</h3></article>
-                    <article><h3>Web Development</h3></article>
-                    <article><h3>Personal Brand</h3></article>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <h2>About Us</h2>
-                    <h3>Who are we</h3>
-                    <h3>Our culture</h3>
-                    <h3>How we work</h3>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <h2>Latest news</h2>
-                    <article><h3>Hoc loco tenere se Triarius non potuit.</h3></article>
-                    <article><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></article>
-                    <article><h3>Bestiarum vero nullum iudicium puto.</h3></article>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <h2>Testimonials</h2>
-                    <article>Testimonial 1</article>
-                    <article>Testimonial 2</article>
-                    <article>Testimonial 3</article>
-                </div>
-            </section>
-
-            <section>
-                <div>
-                    <h2>Contact</h2>
-                </div>
-            </section>
+            <!-- Rest of the content ... -->
         </main>
     </div>
 
     <div>
         <footer>
-            <div>Footer</div>
+            <div>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <hr>
+            <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
+            <div>
+                <ul>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                </ul>
+            </div>
         </footer>
-        <hr>
-        <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
     </div>
 </body>
 </html>
-
