--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -62,6 +62,17 @@
                 </ul>
             </div>
             <hr>
+            <section>
+                <article>
+                    <p>By Kelly D.</p>
+                </article>
+                <article>
+                    <p>By William A.</p>
+                </article>
+                <article>
+                    <p>By Frances J.</p>
+                </article>
+            </section>
             <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
             <div>
                 <ul>
@@ -74,3 +85,4 @@
     </div>
 </body>
 </html>
+
